--- a/src/app/modules/admin/assets/peripherals/peripherals-details/peripherals-details.component.html
+++ b/src/app/modules/admin/assets/peripherals/peripherals-details/peripherals-details.component.html
@@ -22,7 +22,9 @@
                             class="icon-size-5 text-secondary"
                             [svgIcon]="'heroicons_solid:chevron-right'"
                         ></mat-icon>
-                        <span class="ml-1 text-secondary">Peripherals Details</span>
+                        <span class="ml-1 text-secondary"
+                            >Peripherals Details</span
+                        >
                     </div>
                 </div>
                 <div class="flex sm:hidden">
@@ -47,102 +49,210 @@
                 </h2>
             </div>
         </div>
-        <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0 sm:ml-4">
-            <!-- Add product button -->
-            <button class="ml-4" mat-stroked-button>
-                <mat-icon [svgIcon]="'feather:download'"></mat-icon>
-                <span class="ml-2 mr-1">Import CSV</span>
-            </button>
+        <div class="flex flex-flex items-center mt-6 sm:mt-0 sm:ml-4">
+            <!-- <mat-form-field class="fuse-mat-no-subscript w-full sm:w-72 mt-4 sm:mt-0 sm:ml-4">
+                <mat-icon
+                matPrefix
+                class="icon-size-5"
+                [svgIcon]="'heroicons_solid:search'"></mat-icon>
+                <input
+                    matInput
+                    [placeholder]="'Search Inventory Tag'"
+                />            
+            </mat-form-field> -->
+            <mat-form-field
+                class="fuse-mat-no-subscript w-full sm:w-72 mt-4 sm:mt-0 sm:ml-4"
+            >
+                <mat-icon
+                    matPrefix
+                    class="icon-size-5"
+                    [svgIcon]="'heroicons_solid:search'"
+                ></mat-icon>
+                <input
+                    matInput
+                    placeholder="Search Inventory Tag"
+                    (keyup)="applyInventoryTagFilter($event.target.value)"
+                />
+            </mat-form-field>
         </div>
     </div>
 
     <!-- Main -->
     <div class="pt-0">
-        <div class="mat-elevation-z8 overflow-x-auto">
+        <div class="mat-elevation-z8 overflow-x-auto overflow-y-auto">
             <table
                 mat-table
                 [dataSource]="dataSource"
                 matSort
                 (matSortChange)="announceSortChange($event)"
                 class="min-w-full bg-white rounded-lg shadow-md"
-            >
-                <!-- Position Column -->
-                <ng-container matColumnDef="position">
+            >               
+                <ng-container matColumnDef="asset_barcode">
+                    <th
+                        mat-header-cell
+                        *matHeaderCellDef
+                        mat-sort-header
+                        class="px-4 py-5 text-left text-gray-600 font-semibold inventory-tag-header"
+                    >
+                        <mat-icon
+                            class="icon-size-4 mr-4"
+                            svgIcon="feather:tag"
+                        ></mat-icon>
+                        Asset Barcode
+                    </th>
+                    <td
+                        mat-cell
+                        *matCellDef="let element"
+                        class="border-b border-gray-200 px-4 py-2 text-sm font-semibold inventory-tag-cell"
+                    >
+                        # {{ element.asset_barcode }}
+                    </td>
+                </ng-container>
+               
+                <ng-container matColumnDef="date_acquired">
                     <th
                         mat-header-cell
                         *matHeaderCellDef
                         mat-sort-header
                         class="px-4 py-2 text-left text-gray-600 font-semibold"
                     >
-                        No.
+                        Date Acquired
+                    </th>
+                    <td
+                        mat-cell
+                        *matCellDef="let element"
+                        class="border-b border-gray-200 text-sm px-4 py-2"
+                    >
+                        {{ element.date_acquired }}
+                    </td>
+                </ng-container>
+              
+                <ng-container matColumnDef="brand">
+                    <th
+                        mat-header-cell
+                        *matHeaderCellDef
+                        mat-sort-header
+                        class="px-4 py-2 text-left text-gray-600 font-semibold"
+                    >
+                        Brand
+                    </th>
+                    <td
+                        mat-cell
+                        *matCellDef="let element"
+                        class="border-b border-gray-200 text-sm px-4 py-2 pr-12"
+                    >
+                        {{ element.brand }}
+                    </td>
+                </ng-container>
+             
+                <ng-container matColumnDef="model">
+                    <th
+                        mat-header-cell
+                        *matHeaderCellDef
+                        mat-sort-header
+                        class="px-4 py-2 text-left text-gray-600 font-semibold"
+                    >
+                        Model
+                    </th>
+                    <td
+                        mat-cell
+                        *matCellDef="let element"
+                        class="border-b border-gray-200 text-sm px-4 py-2"
+                    >
+                        {{ element.model }}
+                    </td>
+                </ng-container>
+       
+                <ng-container matColumnDef="peripheral_type">
+                    <th
+                        mat-header-cell
+                        *matHeaderCellDef
+                        mat-sort-header
+                        class="px-4 py-2 text-left text-gray-600 font-semibold"
+                    >
+                        Peripheral Type
+                    </th>
+                    <td
+                        mat-cell
+                        *matCellDef="let element"
+                        class="border-b border-gray-200 text-sm px-4 py-2"
+                    >
+                        {{ element.peripheral_type }}
+                    </td>
+                </ng-container>
+       
+                <ng-container matColumnDef="size">
+                    <th
+                        mat-header-cell
+                        *matHeaderCellDef
+                        mat-sort-header
+                        class="px-4 py-2 text-left text-gray-600 font-semibold"
+                    >
+                        Size
                     </th>
                     <td
                         mat-cell
                         *matCellDef="let element"
                         class="border-b border-gray-200 px-4 py-2"
                     >
-                        {{ element.position }}
+                        {{ element.size }}
                     </td>
                 </ng-container>
-
-                <!-- Name Column -->
-                <ng-container matColumnDef="name">
+             
+                <ng-container matColumnDef="color">
                     <th
                         mat-header-cell
                         *matHeaderCellDef
                         mat-sort-header
                         class="px-4 py-2 text-left text-gray-600 font-semibold"
                     >
-                        Name
+                        Color
                     </th>
                     <td
                         mat-cell
                         *matCellDef="let element"
-                        class="border-b border-gray-200 px-4 py-2 pr-12"
+                        class="border-b border-gray-200 text-sm px-4 py-2"
                     >
-                        {{ element.name }}
+                        {{ element.color }}
                     </td>
                 </ng-container>
-
-                <!-- Weight Column -->
-                <ng-container matColumnDef="weight">
+         
+                <ng-container matColumnDef="li_description">
                     <th
                         mat-header-cell
                         *matHeaderCellDef
                         mat-sort-header
                         class="px-4 py-2 text-left text-gray-600 font-semibold"
                     >
-                        Weight
+                        Long Item Description
                     </th>
                     <td
                         mat-cell
                         *matCellDef="let element"
-                        class="border-b border-gray-200 px-4 py-2"
+                        class="border-b border-gray-200 text-sm px-4 py-2"
                     >
-                        {{ element.weight }}
+                        {{ element.li_description }}
                     </td>
                 </ng-container>
-
-                <!-- Symbol Column -->
-                <ng-container matColumnDef="symbol">
+              
+                <ng-container matColumnDef="serial_no">
                     <th
                         mat-header-cell
                         *matHeaderCellDef
                         mat-sort-header
                         class="px-4 py-2 text-left text-gray-600 font-semibold"
                     >
-                        Symbol
+                        Serial Number
                     </th>
                     <td
                         mat-cell
                         *matCellDef="let element"
-                        class="border-b border-gray-200 px-4 py-2"
+                        class="border-b border-gray-200 text-sm px-4 py-2"
                     >
-                        {{ element.symbol }}
+                        {{ element.serial_no }}
                     </td>
                 </ng-container>
-
-                <!-- Action Column -->
+               
                 <ng-container matColumnDef="action">
                     <th
                         mat-header-cell
@@ -156,42 +266,36 @@
                         *matCellDef="let element"
                         class="border-b border-gray-200 px-4 py-2"
                     >
-                        <div class="flex space-x-2">
-                            <button
-                                mat-icon-button
-                                matRipple
-                                class="hover-effect"
-                                matRippleColor="#e1effd"
-                            >
+                        <button
+                            mat-icon-button
+                            [matMenuTriggerFor]="menu"
+                            aria-label="Example icon-button with a menu"
+                        >
+                            <mat-icon>more_vert</mat-icon>
+                        </button>
+                        <mat-menu #menu="matMenu">
+                            <button mat-menu-item>
                                 <mat-icon
-                                    class="z-10"
-                                    svgIcon="feather:eye"
-                                ></mat-icon>
+                                class="icon-size-4 mr-4"
+                                svgIcon="feather:eye"
+                            ></mat-icon>
+                                <span>View</span>
                             </button>
-
-                            <button
-                                mat-icon-button
-                                matRipple
-                                class="hover-effect"
-                                matRippleColor="#e1effd"
-                            >
+                            <button mat-menu-item disabled>
                                 <mat-icon
-                                    class="z-10"
-                                    svgIcon="feather:edit"
-                                ></mat-icon>
+                                class="icon-size-4 mr-4"
+                                svgIcon="feather:edit"
+                            ></mat-icon>
+                                <span>Edit</span>
                             </button>
-                            <button
-                                mat-icon-button
-                                matRipple
-                                class="hover-effect"
-                                matRippleColor="#e1effd"
-                            >
+                            <button mat-menu-item>
                                 <mat-icon
-                                    class="z-10"
-                                    svgIcon="feather:alert-circle"
-                                ></mat-icon>
+                                class="icon-size-4 mr-4"
+                                svgIcon="feather:delete"
+                            ></mat-icon>
+                                <span>Delete</span>
                             </button>
-                        </div>
+                        </mat-menu>
                     </td>
                 </ng-container>
 
@@ -201,16 +305,15 @@
                     *matRowDef="let row; columns: displayedColumns"
                 ></tr>
             </table>
-
-            <!-- Paginator -->
-            <div>
-                <mat-paginator
-                    [pageSizeOptions]="[5, 10, 15, 20]"
-                    [pageSize]="15"
-                    showFirstLastButtons
-                    aria-label="Select page of periodic elements"
-                ></mat-paginator>
-            </div>
+        </div>
+        <!-- Paginator -->
+        <div>
+            <mat-paginator
+                [pageSizeOptions]="[10, 15, 20, 50, 100]"
+                [pageSize]="15"
+                showFirstLastButtons
+                aria-label="Select page of Assets PC"
+            ></mat-paginator>
         </div>
     </div>
 </div>
